--- a/templates/core/partials/steps/step_amount.html
+++ b/templates/core/partials/steps/step_amount.html
@@ -83,6 +83,7 @@
             <div class=" paymentMethodsAccount hidden">
                 {% include 'core/partials/payment_methods_account.html' %}
             </div >
+            <input type="hidden" name="payment_method_id" id="payment_method_id" value=""                                 >
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -105,9 +106,11 @@
         </div>
         <div class="modal-body">
                     {% include 'core/partials/user_address.html' %}
+                <input type="hidden" name="user_address_id" id="user_address_id" value="">
+
         </div>
                   <p>Or just use a new one !</p>
-                <input type="text" name="new_user_account" id="new_user_account">
+                <input type="text" name="new_user_account" id="new_user_account" value="">
 
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
