--- a/templates/core/partials/success_order.html
+++ b/templates/core/partials/success_order.html
@@ -1,30 +1,22 @@
 {%  load i18n %}
 {% load tz %}
 
-	   <div class="row">
-	   	  <div class="col-xs-4 col-sm-4 col-md-4 col-xs-offset-4">
-			<div class="panel panel-success">
-   			 <div class="panel-body">
-			  <center><h1>Sucess !</h1></center>
-			  <p>Please tranfer to this bank account:</p> 
-			  <p>{{bank_account}}</p>
-			  <p>Using this reference number:</p> 
-			  <p>{{unique_ref}}</p>
-			  {% localtime on %}
-			  <p id="pay_until_notice">Notice that you must pay until <strong>{{pay_until |date:"H:iA (e)"}}</strong> </p>
-			  {% endlocaltime %}
-			{#  <p><a class="btn btn-primary btn-lg" role="button" href="/order/">Done ! </a></p> #}
-			 </div><!-- /pannel-body -->
-            </div><!-- /pannel --> 
-             <input type="hidden" name="order_id" value="{{order_id}}" class="order_id" >
-
-			<ul class="list-unstyled list-inline spa-navigation ">
-		        <li><button type="button" class="btn btn-default prev-step"><i class="fa fa-chevron-left"></i> Back</button></li>
-		        <li><button type="button" class="btn btn-info next-step">Next <i class="fa fa-chevron-right"></i></button></li>
-      		</ul>
-		 </div><!-- /col -->				
-		</div><!-- /row -->
+	<div class="panel panel-success">
+		 <div class="panel-body">
+	  <center><h1>Sucess !</h1></center>
+	  <p>Please tranfer to this bank account:</p> 
+	  <p>{{bank_account}}</p>
+	  <p>Using this reference number:</p> 
+	  <p>{{unique_ref}}</p>
+	  {% localtime on %}
+	  <p id="pay_until_notice">Notice that you must pay until <strong>{{pay_until |date:"H:iA (e)"}}</strong> </p>
+	  {% endlocaltime %}
+	{#  <p><a class="btn btn-primary btn-lg" role="button" href="/order/">Done ! </a></p> #}
+	 </div><!-- /pannel-body -->
+	</div><!-- /pannel --> 
+	 <input type="hidden" name="order_id" value="{{order_id}}" class="order_id" >
+	
 
 <script>
-     $('.next-step, .prev-step').on('click', changeState);
+     //$('.next-step, .prev-step').on('click', changeState);
 </script>
