--- a/templates/core/partials/steps/step_confirmation.html
+++ b/templates/core/partials/steps/step_confirmation.html
@@ -8,7 +8,7 @@
     <div class="col-sm-12 center">
         <div class="col-sm-5 col-md-5">
                 <div class="col-lg-12">
-                    <h2 class="amount amount-coin rate-buy"></h2>
+                    <h2 class="amount btc-amount-confirm"></h2>
                 </div>
                 <div class="col-lg-12">
                     {%  trans "BTC" %}
@@ -19,10 +19,10 @@
         </div>
         <div class="col-sm-5 col-md-5">
             <div class="col-lg-12">
-                <h2 class="amount amount-cash rate-buy"></h2>
+                <h2 class="amount cash-amount-confirm"></h2>
             </div>
-            <div class="col-lg-12">
-                {%  trans "RUB" %}
+            <div class="currency col-lg-12">
+                <!--{%  trans "RUB" %}-->
             </div>
         </div>
 
@@ -30,9 +30,10 @@
       <input type="hidden" name="csrfmiddlewaretoken" id="csrfmiddlewaretoken" value="{{ csrf_token }}">
     </div>
     <input type="hidden" name="type" value="1" class="trade-type" >
+    <button class="btn btn-info buy-go btn-lg" onclick="window.location='http://localhost:8000/en/';">Cancel</button>
     <button  class="sell-go btn btn-danger btn-lg place-order hidden">{% trans "Sell" %}</button>
     <button  class="buy-go btn btn-success btn-lg place-order ">{% trans "Buy" %}</button>
-
+    
     </div>
     </div>
     
@@ -50,6 +51,25 @@
         </div>
         <div class="modal-body successOrder">
                     {% include 'core/partials/success_order.html' %}
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+
+  <!-- Modal for Sell Action-->
+  <div class="modal fade" id="orderSuccessModalSell" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">×</button>
+          <h4 class="modal-title">Success</h4>
+        </div>
+        <div class="modal-body successOrder">
+                    {% include 'core/partials/success_order_sell.html' %}
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
