--- a/templates/core/partials/steps/step_confirmation.html
+++ b/templates/core/partials/steps/step_confirmation.html
@@ -65,7 +65,7 @@
           <h4 class="modal-title">Success</h4>
         </div>
         <div class="modal-body successOrder">
-                    {% include 'core/partials/success_order_sell.html' %}
+            {% include 'core/partials/success_order_sell.html' %}
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -75,4 +75,6 @@
     </div>
   </div>
 
+{% endblock %}
+{% block spa_navigation %}
 {% endblock %}
