--- a/templates/core/partials/steps/step_amount.html
+++ b/templates/core/partials/steps/step_amount.html
@@ -10,12 +10,12 @@
                 <h2 class="currency"></h2>
             </div>
             <div class="col-lg-12">
-              <span class="btn btn-success btn-lg active trigger trigger-buy">
+              <span class="btn btn-success btn-lg trigger trigger-buy">
                     {% trans "Buy" %}
               </span>
             </div>
         </div>
-        <div class="col-xs-1 col-sm-1 col-md-1"></div>
+        <div class="col-md-2 col-xs-2"></div>
         <div class="col-xs-5 col-sm-5 col-md-5 controls">
             <div class="row">
                 <div class="col-lg-12">
@@ -34,7 +34,7 @@
     </div>
 
     <div class="row">
-        <div class="col-xs-12 col-sm-5 col-md-5">
+        <div class="col-xs-5 col-sm-5 col-md-5">
             <div class="panel panel-default">
                 <div class="panel-body">
                     <div class="input-group">
@@ -47,11 +47,11 @@
             </div><!-- /pannel -->
         </div><!-- /col -->
 
-        <div class="col-xs-12 col-sm-2 col-md-2">
+        <div class="col-xs-2 col-sm-2 col-md-2">
             <h2>{% trans "To" %}</h2>
         </div><!-- /col -->
 
-        <div class="col-xs-12 col-sm-5 col-md-5">
+        <div class="col-sm-5 col-xs-5 col-md-5">
             <div class="panel panel-default">
                 <div class="panel-body">
                     <div class="input-group">
