--- a/templates/core/index_order.html
+++ b/templates/core/index_order.html
@@ -3,6 +3,8 @@
 {% load staticfiles %}
 {% load bootstrap3 %}
 {% block main %}
+
+
         	
 			<div class="page-header">
 				<h1>
@@ -110,38 +112,30 @@
 		            	{% endif %}
 
 
-						
-						<td {% if not order.frozen %} style="display:none" {% endif %} 
-							id="td-frozen-withdraw-{{order.pk}}">
+						{% if order.frozen %}
+							
+							<td id="td-frozen-withdraw-{{order.pk}}">
+								<span class="frozen">
+									{{order.withdraw_address | default_if_none:_("Not Defined")}}
+								</span>
+							</td>
 
-							<span class="frozen">
-								{{order.withdraw_address | default_if_none:_("Not Defined")}}
-							</span>
-						</td>
+						{% else %}
 
-						{% if withdraw_addresses %} {# if user has at least one withdraw address #}
-						
-			            	<td title="{% trans 'Click to edit Withdraw Address' %}" 
-			            		{% if order.frozen %} style="display:none" {% endif %}
-			            		id="td-withdraw-{{order.pk}}" >
+			            	<td id="td-withdraw-{{order.pk}}">
 
 			            		<i class="fa fa-pencil" aria-hidden="true"></i>
-								<span class="withdraw_address" id="span-withdraw-{{order.pk}}"
-									data-type="select"
-									data-tip="select"
-									data-source="{{withdraw_addresses}}"
-									data-emptytext="{% trans 'Not Defined' %}"
-									data-value="{{order.withdraw_address| default_if_none:''}}"
-									data-pk="{{order.pk}}" 
-									data-url="{% url 'core.update_withdraw_address' order.pk %}" 
-									data-title="{% trans "Select Withdraw Address"%}">
-									{{order.transaction_set.first.address_to.address | default_if_none:_("Not Defined")}}
-								</span>
-			            	</td>
 
-			            {% else %}
-			            	<td><a href="{% url 'core.user_profile' %}">You need to create a Withdraw Address</a></td>
-			            	{# TODO: Add logic to create withdraw here instead of guinding user to profile page #}
+			            		<span class="withdraw_address" id="span-withdraw-{{order.pk}}"
+			            			data-toggle="popover"
+			            			title="Set Withdraw Address"
+			            			data-html="true"
+			            			data-placement="top"
+			            			data-content='{% include 'core/partials/popover_withdraw_address.html' %}'>
+			            			
+			            			{{order.transaction_set.first.address_to.address | default_if_none:_("Not Defined")}}
+		            			</span>
+			            	</td>
 			            {% endif %}
 		            	
 	
@@ -199,4 +193,18 @@
 	<link href="{% static 'bower_components/bootstrap-toggle/css/bootstrap-toggle.min.css' %}" rel="stylesheet">
 	<script src="{% static 'bower_components/bootstrap-toggle/js/bootstrap-toggle.min.js' %}"></script>
 
+	<script type="text/javascript">
+		$(function () {
+		  $('[data-toggle="popover"]').popover()
+		})
+		function close_popover(order_pk) {
+			$("#span-withdraw-" + order_pk).trigger('click');
+		}
+
+		function toggle_widthdraw_address_form(order_pk) {
+			$("#select-withdraw_address-" + order_pk).toggle();
+			$("#insert-withdraw_address-" + order_pk).toggle();
+		}
+
+	</script>
 {% endblock %}
