--- a/templates/core/partials/popover_withdraw_address.html
+++ b/templates/core/partials/popover_withdraw_address.html
@@ -1,37 +1,54 @@
-{# this will be rendered by index_order.html inside a loop where 'order' contains each order of a user #}
+<div id="popover-template" style="display:none">
 
-<div class="col-xs-12 col-sm-12 col-md-12">
-    <form method="post" action="{% url 'core.update_withdraw_address' order.pk %}">
-        
-        
-        
-        <div class="form-group"  id="select-withdraw_address-{{order.pk}}"
-            {% if not withdraw_addresses %} style="display:none" {% endif %}>
+    <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 set_withdraw_address" {% if not withdraw_addresses %} style="display:none" {% endif %}>
+            <form method="post">
+                <input type="hidden" name="csrfmiddlewaretoken" value="{{csrf_token}}" />
+                <div class="form-group">
+                    <select class="form-control">
+                        <option value="">Select a registered one</option>
+                        {% for addr in withdraw_addresses %}
+                        <option value="{{addr.pk}}">{{addr.address}}</option>
+                        {% endfor %}
+                    </select>
+                    <br/>
 
-            <select  class="form-control">
-                <option value="">Select a registered one</option>
-                {% for addr in withdraw_addresses %}
-                <option value="{{addr.pk}}">{{addr.text}}</option>
-                {% endfor %}
-            </select>
-            <br/>
-            <button type="button" onclick="toggle_widthdraw_address_form({{order.pk}})" class="btn btn-default btn-sm">Add new</button>
-            <a href="javascript:close_popover({{order.pk}})">Cancel</a>
-        </div>
-    
-        <div class="form-group" id="insert-withdraw_address-{{order.pk}}"
-            {% if withdraw_addresses %} style="display:none" {% endif %}>
+                    <button type="submit" data-loading-text='<i class="fa fa-spinner fa-spin" aria-hidden="true"></i> OK' class="btn btn-primary" autocomplete="off">
+                        OK
+                    </button>
 
-            <label for="withdraw_address" class="sr-only">New Address</label>
-            <input type="text" id="withdraw_address" class="form-control" placeholder="Enter new address" />    
-            <br/>
-            <button type="submit" class="btn btn-default btn-sm">Submit</button>
-            {% if withdraw_addresses %}
-                <a href="javascript:toggle_widthdraw_address_form({{order.pk}})">Cancel</a>
-            {% else %}
-                <a href="javascript:close_popover({{order.pk}})">Cancel</a>
-            {% endif %}
+                    <a href="#" class="closepopover">Cancel</a>
+                    <button type="button" class="btn btn-default btn-sm pull-right toggle_widthdraw_address_form">Add new</button>
+                </div>
+            </form>
         </div>
 
-    </form>
-</div>
+        <div class="col-xs-12 col-sm-12 col-md-12 insert_withdraw_address" {% if withdraw_addresses %} style="display:none" {% endif %}>
+            <form method="post">
+
+                <input type="hidden" name="csrfmiddlewaretoken" value="{{csrf_token}}" />
+                <div class="form-group">
+
+                    <label for="withdraw_address" class="sr-only">New Address</label>
+                    <input type="text" maxlength="35" class="form-control" placeholder="Enter new address" />    
+                    <br/>
+
+                    <button type="submit" data-loading-text='<i class="fa fa-spinner fa-spin" aria-hidden="true"></i> OK' class="btn btn-primary" autocomplete="off">
+                        OK
+                    </button>
+
+                    {% if withdraw_addresses %}
+                    <a href="#" class="toggle_widthdraw_address_form">Cancel</a>
+                    {% else %}
+                    <a href="#" class="closepopover">Cancel</a>
+                    {% endif %}
+                </div>
+            </form>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 text-danger text-center withdraw_address_err"></div>
+        </div>
+
+    </div>
+</div>    
