--- a/templates/core/index_order.html
+++ b/templates/core/index_order.html
@@ -134,6 +134,7 @@
 			            			data-html="true"
 			            			data-container="body"
 			            			data-placement="top"
+			            			data-order-pk="{{order.pk}}"
 			            			data-url-update="{% url 'core.update_withdraw_address' order.pk %}"
 			            			data-url-create="{% url 'core.create_withdraw_address' %}">
 			            			
