--- a/templates/core/partials/popover_withdraw_address.html
+++ b/templates/core/partials/popover_withdraw_address.html
@@ -1,7 +1,7 @@
 <div id="popover-template" style="display:none">
 
     <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 set_withdraw_address" {% if not withdraw_addresses %} style="display:none" {% endif %}>
+        <div class="col-md-12 set_withdraw_address" {% if not withdraw_addresses %} style="display:none" {% endif %}>
             <form method="post">
                 <input type="hidden" name="csrfmiddlewaretoken" value="{{csrf_token}}" />
                 <div class="form-group">
@@ -23,7 +23,7 @@
             </form>
         </div>
 
-        <div class="col-xs-12 col-sm-12 col-md-12 create_withdraw_address" {% if withdraw_addresses %} style="display:none" {% endif %}>
+        <div class="col-md-12 create_withdraw_address" {% if withdraw_addresses %} style="display:none" {% endif %}>
             <form method="post">
 
                 <input type="hidden" name="csrfmiddlewaretoken" value="{{csrf_token}}" />
@@ -47,7 +47,7 @@
         </div>
 
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12 text-danger text-center withdraw_address_err"></div>
+            <div class="col-md-12 text-danger text-center withdraw_address_err"></div>
         </div>
 
     </div>
