--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 
 
-<script src="http://code.jquery.com/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery.min.js"></script>
 <script   src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"
           integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="
           crossorigin="anonymous"></script>
