--- a/templates/core/partials/steps/step_amount.html
+++ b/templates/core/partials/steps/step_amount.html
@@ -64,6 +64,8 @@
             </div><!-- /pannel -->
         </div><!-- /col -->
     </div>
- {% include 'core/partials/modals/buy.html' %}
- {% include 'core/partials/modals/sell.html' %}
+ {% include 'core/partials/modals/payment_type.html' with id="UserAccountModal" type="sell" %}
+ {% include 'core/partials/modals/payment_type.html' with id="PayMethModal" type="buy" %}
+ {% include 'core/partials/modals/sell.html' with id="CardSellModal" method="card" form="card" legend="Add a new payout card" %}
+ {% include 'core/partials/modals/sell.html' with id="QiwiSellModal" type="wallet" form="phone" legend="Add a new payout wallet" %}
 {% endblock %}
