--- a/templates/core/partials/steps/step_confirmation.html
+++ b/templates/core/partials/steps/step_confirmation.html
@@ -2,38 +2,42 @@
 {% load i18n %}
 {% block step_content %}
     <div class="row step-confirm">
-    <h3>{% trans "Order" %}</h3>
-    <div class="col-sm-12 center">
-        <div class="col-sm-5 col-md-5">
+        <h3>{% trans "Order" %}</h3>
+        <div class="col-sm-12 center">
+            <div class="col-sm-5 col-md-5">
                 <div class="col-lg-12">
                     <h2 class="amount btc-amount-confirm"></h2>
                 </div>
                 <div class="col-lg-12">
                     {%  trans "BTC" %}
                 </div>
-        </div>
-        <div class="col-sm-2 col-md-2">
-            <h2>{% trans "For" %}</h2>
-        </div>
-        <div class="col-sm-5 col-md-5">
-            <div class="col-lg-12">
-                <h2 class="amount cash-amount-confirm"></h2>
             </div>
-            <div class="currency col-lg-12">
-                <!--{%  trans "RUB" %}-->
+            <div class="col-sm-2 col-md-2">
+                <h2>{% trans "For" %}</h2>
             </div>
-        </div>
+            <div class="col-sm-5 col-md-5">
+                <div class="col-lg-12">
+                    <h2 class="amount cash-amount-confirm"></h2>
+                </div>
+                <div class="currency col-lg-12">
+                    <!--{%  trans "RUB" %}-->
+                </div>
+            </div>
 
-    <div style="display:none">
-      <input type="hidden" name="csrfmiddlewaretoken" id="csrfmiddlewaretoken" value="{{ csrf_token }}">
+        <div style="display:none">
+          <input type="hidden" name="csrfmiddlewaretoken" id="csrfmiddlewaretoken" value="{{ csrf_token }}">
+        </div>
+        <!-- Modal -->
+        <input type="hidden" name="type" value="1" class="trade-type">
+        <input type="hidden" name="payment-option" value="" class="payment-option">
+        <input type="hidden" name="payment-preference" value="" class="payment-preference">
+        <input type="hidden" name="payment-preference-identifier" value="" class="payment-preference-identifier">
+        <span class="btn btn-info buy-go btn-lg" href="/">Cancel</span>
+        <button  class="sell-go btn btn-danger btn-lg place-order hidden">{% trans "Sell" %}</button>
+        <button  class="buy-go btn btn-success btn-lg place-order ">{% trans "Buy" %}</button>
+
     </div>
-    <input type="hidden" name="type" value="1" class="trade-type" >
-    <button class="btn btn-info buy-go btn-lg" onclick="window.location='http://localhost:8000/en/';">Cancel</button>
-    <button  class="sell-go btn btn-danger btn-lg place-order hidden">{% trans "Sell" %}</button>
-    <button  class="buy-go btn btn-success btn-lg place-order ">{% trans "Buy" %}</button>
-    
-    </div>
-    </div>
+</div>
 
   <!-- Modal -->
   <div class="modal fade" id="orderSuccessModal" role="dialog">
@@ -46,7 +50,7 @@
           <h4 class="modal-title">Success</h4>
         </div>
         <div class="modal-body successOrder">
-                    {% include 'core/partials/success_order.html' %}
+            {% include 'core/partials/success_order.html' %}
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -56,24 +60,7 @@
     </div>
   </div>
 
-  <!-- Modal for Sell Action-->
-  <div class="modal fade" id="orderSuccessModalSell" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">×</button>
-          <h4 class="modal-title">Success</h4>
-        </div>
-        <div class="modal-body successOrder">
-            {% include 'core/partials/success_order_sell.html' %}
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-      
-    </div>
-  </div>
+
 
 {% endblock %}
 {% block spa_navigation %}
