--- a/templates/core/partials/success_order.html
+++ b/templates/core/partials/success_order.html
@@ -1,22 +1,36 @@
 {%  load i18n %}
 {% load tz %}
-
-	<div class="panel panel-success">
-		 <div class="panel-body">
-	  <center><h1>Sucess !</h1></center>
-	  <p>Please tranfer to this bank account:</p> 
-	  <p>{{bank_account}}</p>
-	  <p>Using this reference number:</p> 
-	  <p>{{unique_ref}}</p>
-	  {% localtime on %}
-	  <p id="pay_until_notice">Notice that you must pay until <strong>{{pay_until |date:"H:iA (e)"}}</strong> </p>
-	  {% endlocaltime %}
-	{#  <p><a class="btn btn-primary btn-lg" role="button" href="/order/">Done ! </a></p> #}
-	 </div><!-- /pannel-body -->
-	</div><!-- /pannel --> 
-	 <input type="hidden" name="order_id" value="{{order_id}}" class="order_id" >
+<div class="panel panel-success">
+    <div class="panel-body">
+        <h1>{% trans 'Order placed successfully' %}</h1>
+        <div class="row">
+            <div class="col col xs-12"></div>
+            {% trans 'Please make payment to the following' %} {{ payment_method }}
+        </div>
+        <div class="row">
+            <div class="col col-lg-12">
+                {{bank_account}}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col col-lg-12">
+                {% trans 'Please put the following reference in the comment:' %}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col col-lg-12 unique_ref">
+                {{unique_ref}}
+            </div>
+        </div>
+        <div class="col col-lg-12">
+         {% trans 'Notice that you must pay until' %}
+        </div>
+        {% localtime on %}
+        <div class="col col-lg-12" id="pay_until_notice">
+            <strong>{{pay_until |date:"H:iA (e)"}}</strong>
+        </div>
+        {% endlocaltime %}
+    </div><!-- /pannel-body -->
+</div><!-- /pannel -->
+<input type="hidden" name="order_id" value="{{order_id}}" class="order_id" >
 	
-
-<script>
-     //$('.next-step, .prev-step').on('click', changeState);
-</script>
