--- a/templates/core/partials/forms/phone.html
+++ b/templates/core/partials/forms/phone.html
@@ -4,7 +4,12 @@
 </div>
 <div class="row">
     <div class="col col-lg-12">
-        <input type="text" name="phone" id="phone" class="phone"
+        <input type="text" name="phone" id="phone" class="phone val"
                value="{% if user.is_authenticated  %}{{ user.profile.phone }}{% else %}+7{% endif %}">
+    </div>
+    <div class="row">
+        <div class="col-sm-4 col-sm-offset-4">
+            <span class="btn btn-primary save save-phone">{% trans "Go" %}</span>
+        </div>
     </div>
 </div>
