--- a/templates/core/partials/menu.html
+++ b/templates/core/partials/menu.html
@@ -1,6 +1,6 @@
 {%  load i18n %}
 
-<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+<nav class="navbar navbar-light">
   <div class="container-fluid">
 
     <!-- Brand and toggle get grouped for better mobile display -->
