--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -40,6 +40,7 @@
     <link rel="shortcut icon" href="img/favicon.png">
     <!-- 	-->
     <link rel="stylesheet" href="{% static 'css/overrides.css' %}">
+    <link rel="stylesheet" href="{% static 'css/forms.css' %}">
     <script type="text/javascript">
         // TODO: which is the best way to translate JS messages?
         var HTTP_500_MSG = "{% trans 'Service unavailable. Please try again later.' %}";
@@ -47,13 +48,18 @@
     </script>
 </head>
 <body>
+   <div class="menuContainer">
+        {% include 'core/partials/menu.html' %}
+    </div>
     <div class="container">
-        <div class="menuContainer">
-            {% include 'core/partials/menu.html' %}
-        </div>
+
         {% block main %}
         {% endblock %}
     </div>
+    {% include 'core/partials/popular_faq.html' %}
+    {% include 'core/partials/seo_footer.html' %}
+    {% include 'core/partials/footer.html' %}
+
     <script src="https://code.jquery.com/jquery.min.js"></script>
     <script   src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"
           integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="
@@ -68,6 +74,8 @@
           Cookies.set("USER_TZ", moment.tz.guess());
         });
     </script>
+    <script src="{% static 'js/footer.js' %}"></script>
+
     {% bootstrap_javascript %}
     {% block extra_js_footer %} {% endblock %}
 </body>
