--- a/templates/core/partials/steps/step_amount.html
+++ b/templates/core/partials/steps/step_amount.html
@@ -1,6 +1,8 @@
 {% extends 'core/partials/steps/step_base.html' %}
 {% load i18n %}
 {% block step_content %}
+    <div id="container" style="width: 100%; height: 350px; margin: 0 auto">
+    </div>
     <div class="row">
         <div class="col-xs-5 col-sm-5 col-md-5 center-block controls">
             <div class="col-lg-12">
