--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -153,11 +153,11 @@ select {
   filter: alpha(opacity=100) !important
 }
 .process-row:before{
-  top:40px;
+  top:60px;
   bottom:0;
   position:absolute;
   content:" ";
-  width:100%;
+  width:97%;
   height:1px;
   background-color:#ccc;
   z-order:0
@@ -200,6 +200,10 @@ select {
     .amount, .currency-select {
         clear: both;
         border-radius: 2px;
+        width: 100%;
+    }
+
+    body html .tab-pane select {
         width: 100%;
     }
 }
